# rullst-orm

./: .gitignore  AGENTS.md  AUDIT.md  AUDITORIA.md  AUDITORIA.md.orig  Audit_May_31.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NEW_AUDIT.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  index.html  largest_chunk.rs  new-audit.md  new.md  parse_patch.sh  tmp_patch.diff
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-audit.yml  ci.yml  deploy-docs.yml  release-plz.yml
assets/: index-BAW_KrS8.js  index-BX5_R0Bw.css  index-CMG8lPl5.css
docs/: 1-basics.md  1-getting-started.md  2-admin-panel.md  2-relationships.md  3-advanced-features.md  4-migrations-schema.md  PR_DESCRIPTION.md  audit_report.md  audit_report_complete.md  audit_report_v2.md  index.md  spec.md  v2_roadmap.md
rullst-orm/: Cargo.toml
rullst-orm-macros/: Cargo.toml
rullst-orm-macros/src/: builder.rs  factory_observer.rs  lib.rs  models.rs  parser.rs  relationships.rs
rullst-orm-macros/tests/: macro_tests.rs
rullst-orm/benches/: orm_bench.rs
rullst-orm/examples/: admin_panel.rs  advanced_joins_and_subqueries.rs  api_resources.rs  artisan_demo.rs  audit_trail.rs  basic.rs  collections.rs  compile_time_safety.rs  constrained_eager_loading.rs  custom_soft_delete.rs  enterprise_scaling.rs  factories_and_seeders.rs  field_hiding.rs  hooks.rs  json_casting.rs  many_to_many.rs  migrations.rs  observers.rs  polymorphic_relationships.rs  query_logging.rs  redis_cache_and_events.rs  relationships.rs  saas_multi_tenancy.rs  scopes.rs  scout_search.rs  tenant_context_switching.rs  transactions.rs
rullst-orm/src/: admin.rs  audit.rs  collection.rs  database.rs  db.rs  error.rs  lib.rs  resource.rs  schema.rs  scout.rs  scratch.rs  tenant.rs  types.rs
rullst-orm/tests/: integration_init_replicas.rs  integration_tests.rs
rust-eloquent/: Cargo.toml
rust-eloquent-macros/: Cargo.toml
rust-eloquent-macros/src/: builder.rs  factory_observer.rs  lib.rs  models.rs  parser.rs  relationships.rs
rust-eloquent-macros/tests/: macro_tests.rs
rust-eloquent/examples/: basic.rs  factories_and_seeders.rs  hooks.rs  json_casting.rs  polymorphic_relationships.rs  relationships.rs
rust-eloquent/src/: lib.rs  schema.rs
scratch/: old_macro.rs  refactor_macro.py  rename.py
website/: index.html  package-lock.json  package.json  style.css  vite.config.ts
website/src/: main.ts
