[package]
name = "rullst-orm-macros"
version = "5.0.2"
edition = "2024"
description = "Procedural macros for the rullst-orm ORM."
license = "MIT"
repository = "https://github.com/venelouis/rullst-orm"
readme = "../README.md"

[lib]
proc-macro = true

[features]
strict-postgres = []
strict-mysql = []
strict-sqlite = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
rullst-orm = { path = "../rullst-orm" }
