[package]
name = "rullst-orm"
version = "4.0.1"
edition = "2024"
description = "An Active Record ORM for Rust."
license = "MIT"
repository = "https://github.com/venelouis/rullst-orm"
keywords = ["orm", "database", "sqlx", "orm", "active-record"]
categories = ["database"]
readme = "../README.md"

[dependencies]
rullst-orm-macros = { path = "../rullst-orm-macros", version = "4" }
sqlx = { version = "0.9", features = ["sqlite", "postgres", "mysql", "any", "runtime-tokio", "macros", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }
rand = "0.10"

[features]
default = []
redis = ["dep:redis"]
strict-postgres = []
strict-mysql = []
strict-sqlite = []

[dev-dependencies]
rand = "0.10"
axum = "0.8"
